--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -4,6 +4,7 @@
     "com.unity.feature.development": "1.0.1",
     "com.unity.ide.visualstudio": "2.0.15",
     "com.unity.inputsystem": "1.3.0",
+    "com.unity.probuilder": "5.0.4",
     "com.unity.test-framework": "1.1.31",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.ugui": "1.0.0",
